# jarvisbr

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml
agents/windows/: install-agent.ps1  pyproject.toml
agents/windows/jarvis_agent/: __init__.py  apk_downloader.py  auth.py  config.py  confirmation_guard.py  file_indexer.py  main.py  search_engine.py  thumbnails.py  transfer.py  websocket_client.py
agents/windows/jarvis_agent/tools/: browser_actions.py  file_actions.py  open_app.py
agents/windows/tests/: test_confirmation_guard.py
api/: package.json  tsconfig.json
api/db/migrations/: 001_init.sql  002_indexes_and_search.sql  003_hologram_personality.sql  004_execution_tokens_and_permissions.sql  005_personalization_and_install.sql  006_seed_super_admin.sql
api/db/seeds/: 001_dev_user.sql
api/scripts/: check-db.ts  migrate.ts
api/src/: app.ts  server.ts  types.ts
api/src/ai/: conversation.service.ts
api/src/audit/: audit.routes.ts  audit.service.ts
api/src/auth/: auth.middleware.ts  auth.routes.ts  settings.routes.ts  tokens.ts
api/src/commands/: commands.routes.ts  intent.ts
api/src/config/: env.ts
api/src/confirmations/: agent-execution.routes.ts  (+2 more)
api/test/: confirmation-guard.test.ts  conversation.test.ts  intent.test.ts
apps/mobile/: App.tsx  app.json  eas.json  package.json  pubspec.yaml  tsconfig.json
apps/web/: index.html  package.json
docs/: android-updates.md  api-contracts.md  product-spec-summary.md  product-spec.docx  security-model.md  ux-hologram-spec.md
(+26 files in other folders)
